refactor(resource) add poster model ande refactor create movie BREAKING CHANGE
